--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
 
           <!-- Appendix F -->
           <div class="col-md-4 mb-3">
-            <a href="assets/Appendix_C.pdf" target="_blank" rel="noopener noreferrer"
+            <a href="assets/Banares_weeklyReport.pdf" target="_blank" rel="noopener noreferrer"
               class="d-block p-3 rounded text-white"
               style="background-color: #00d1ff; text-decoration: none; font-weight: bold;">
               Complete Weekly Journal
