--- a/index.html
+++ b/index.html
@@ -541,6 +541,7 @@
         
         <h4 style="font-weight: bold;">Conclusion</h4>
         <p>In conclusion, this project has been a valuable learning experience that enhanced my technical skills and deepened my understanding of how digital solutions can improve real-world processes. It reinforced the importance of user-focused design, teamwork, and adaptability in successful system development.</p>      
+        <p style="font-weight: bold;">Total rendered hours: 416</p>
       </div><!-- End Synthesis Title -->
                       
 
