--- a/index.html
+++ b/index.html
@@ -239,88 +239,93 @@
     </section><!-- /Skills Section -->
 
     <!-- Resume Section -->
-    <section id="resume" class="resume section">
+    <!-- Resume Section -->
+<section id="resume" class="resume section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
-      </div><!-- End Section Title -->
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Resume</h2>
+  </div><!-- End Section Title -->
 
-      <div class="container">
+  <div class="container">
+    <div class="row">
+      <!-- Left Column -->
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        <h3 class="resume-title">Summary</h3>
+        <div class="resume-item pb-0">
+          <h4>Emmanuell Bañares</h4>
+          <p><em>A person who is motivated and adaptable to technology with strong eagerness to learn and grow...</em></p>
+          <ul>
+            <li>Pulo, Cabuyao, Laguna, 4025</li>
+            <li>09475522180</li>
+            <li>efbanares@gmail.com</li>
+          </ul>
+        </div>
 
-        <div class="row">
+        <h3 class="resume-title">Education</h3>
+        <div class="resume-item">
+          <h4>Bachelor of Science in Information Technology</h4>
+          <h5>2021 - Present</h5>
+          <p><em>Mapúa Malayan Colleges Laguna</em></p>
+          <p>(College)</p>
+        </div>
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
+        <div class="resume-item">
+          <h4>Information Communication Technology</h4>
+          <h5>2019 - 2021</h5>
+          <p><em>Mapúa Malayan Colleges Laguna</em></p>
+          <p>(Senior Highschool)</p>
+        </div>
 
-            <div class="resume-item pb-0">
-              <h4>Emmanuell Bañares</h4>
-              <p><em>A person who is motivated and adaptable to technology with strong eagerness to learn and grow. Able to grasp concepts at a steady pace, open to guidance, and always ready to take on challenges. Committed to achieving                goal with determination and a problem-solving mindset. Comfortable working with others in a collaborative environment.</em></p>
-              <ul>
-                <li>Pulo, Cabuyao, Laguna, 4025</li>
-                <li>09475522180</li>
-                <li>efbanares@gmail.com</li>
-              </ul>
-            </div><!-- Edn Resume Item -->
+        <div class="resume-item">
+          <h4>Highschool</h4>
+          <h5>2015 - 2019</h5>
+          <p><em>Holy Redeemer School of Cabuyao</em></p>
+        </div>
+      </div>
 
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Bachelor of Science in Information Technology</h4>
-              <h5>2021 - Present</h5>
-              <p><em>Mapúa Malayan Colleges Laguna.</em></p>
-              <p>(College)</p>
-            </div><!-- Edn Resume Item -->
+      <!-- Right Column -->
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+        <h3 class="resume-title">Professional Experience</h3>
+        <div class="resume-item">
+          <h4>Intern at Municipality of Biñan</h4>
+          <h5>2025 - Present</h5>
+          <p><em>Zapote, Biñan</em></p>
+          <ul>
+            <li>Assigned to the Housing Department in Biñan City Hall to digitalize their census and tagging process. (Web Development)</li>
+          </ul>
+        </div>
 
-            <div class="resume-item">
-              <h4>Information Communication Technology</h4>
-              <h5>2019 - 2021</h5>
-              <p><em>Mapúa malayan colleges laguna</em></p>
-              <p>(Senior Highschool)</p>
-            </div><!-- Edn Resume Item -->
-
-              <div class="resume-item">
-              <h4>Highschool</h4>
-              <h5>2015 - 2019</h5>
-              <p><em>Holy Redeemer School of Cabuyao </em></p>
-              <p></p>
-            </div><!-- Edn Resume Item -->
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Intern at Municipality of Biñan</h4>
-              <h5>2025 - Present</h5>
-              <p><em>Zapote, Biñan </em></p>
-              <ul>
-                <li>Assigned to the Housing Department in Biñan City Hall to digitalize their census and tagging process. (Web Development)</li>
-              </ul>
-            </div><!-- Edn Resume Item -->
-
-
-
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Certifications</h3>
-            <div class="resume-item">
-              <h4></h4>
-              <ul>
-                <li>CompTIA IT Fundamental+ (ITF+) Certification</li>
-                <li>Introduction to Firewalls - 2 Hour Beginner Crash Course (Udemy)</li>
-                <li>Start Career in CyberSecurity - The Ultimate Guide (Udemy)</li>
-                <li>Introduction to Edge Computing</li>
-                <li>WearOS: Emerging Technology for Internet and Learning of Everything</li>
-            
-              </ul>
-            </div><!-- Edn Resume Item -->
-
-          </div>
-
+        <h3 class="resume-title">Certifications</h3>
+        <div class="resume-item">
+          <ul>
+            <li>
+              CompTIA IT Fundamental+ (ITF+)
+              <br><a href="assets/Comptia_cert.png" class="btn btn-sm btn-primary mt-1" target="_blank">View Certificate</a>
+            </li>
+            <li>
+              Introduction to Firewalls - 2 Hour Beginner Crash Course (Udemy)
+              <br><a href="assets/E-certFirewall_Banares.pdf" class="btn btn-sm btn-primary mt-1" target="_blank">View Certificate</a>
+            </li>
+            <li>
+              Start Career in CyberSecurity - The Ultimate Guide (Udemy)
+              <br><a href="assets/Cyber.pdf" class="btn btn-sm btn-primary mt-1" target="_blank">View Certificate</a>
+            </li>
+            <li>
+              Introduction to Edge Computing
+              <br><a href="assets/Edge_computing.pdf" class="btn btn-sm btn-primary mt-1" target="_blank">View Certificate</a>
+            </li>
+            <li>
+              WearOS: Emerging Technology for Internet and Learning of Everything
+              <br><a href="assets/WearOS.pdf" class="btn btn-sm btn-primary mt-1" target="_blank">View Certificate</a>
+            </li>
+          </ul>
         </div>
 
       </div>
-
-    </section><!-- /Resume Section -->
+    </div>
+  </div>
+</section><!-- /Resume Section -->
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section light-background">
