--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/emman-profile.jpg" rel="icon">
-  <link href="assets/img/emman-profile.jpg" rel="emman-profile">
+  <link href="assets/img/Formal_banare.jpg" rel="icon">
+  <link href="assets/img/Formal_banare.jpg" rel="Formal_banare">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
 
@@ -45,7 +45,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/emman-profile.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/Formal_banare.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -136,7 +136,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/emman-profile.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Formal_banare.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Undergrad student at Mapúa Malayan Colleges Laguna.</h2>
@@ -691,7 +691,6 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
       </div>
     </div>
 
