--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Emmanuell F. Bañares</h2>
-        <p>I'm a <span class="typed" data-typed-items="College Student, Undergrad, Intern, IT student">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm a <span class="typed" data-typed-items="Bachelor of Science Information Technology Student">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
           <!-- CV Button -->
           <a href="assets/Bañares_CV_Updated.pdf" 
             class="btn mt-3" 
