--- a/index.html
+++ b/index.html
@@ -289,20 +289,39 @@
           <h5>2015 - 2019</h5>
           <p><em>Holy Redeemer School of Cabuyao</em></p>
         </div>
+        <h3 class="resume-title">Organizations</h3>
+          <div class="resume-item">
+            <h4>InFoTech Society</h4>
+            <p>Member</p>
+          </div>
       </div>
 
       <!-- Right Column -->
-      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-        <h3 class="resume-title">Professional Experience</h3>
-        <div class="resume-item">
-          <h4>Intern at Municipality of Biñan</h4>
-          <h5>2025 - Present</h5>
-          <p><em>Zapote, Biñan</em></p>
-          <ul>
-            <li>Assigned to the Housing Department in Biñan City Hall to digitalize their census and tagging process. (Web Development)</li>
-          </ul>
-        </div>
+        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+          <h3 class="resume-title">Work Experience / Project Developed</h3>
 
+          <div class="resume-item">
+            <h4>Municipality of Biñan – Intern</h4>
+            <h5>April 2025 – August 2025</h5>
+            <p><em>Zapote, Biñan</em></p>
+            <p><strong>Census and Tagging System</strong><br>
+            A web-based platform for encoding and managing community census data with beneficiary tracking.</p>
+            <p><strong>Tools used:</strong> PHP (CodeIgniter), MySQL, JavaScript, Bootstrap</p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Capstone Project</h4>
+            <h5>August 2024 – August 2025</h5>
+            <p><strong>SmartFlow: IoT Enabled Portable Traffic Light System for Enhanced Urban Mobility</strong></p>
+            <p><strong>Tools used:</strong> Android Studio, Java, Firebase</p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Web Portfolio</h4>
+            <h5>July 2025</h5>
+            <p><strong>Tools used:</strong> VS Code, JavaScript, HTML</p>
+            <p><a href="https://mirai1728.github.io/emman/" target="_blank">https://mirai1728.github.io/emman/</a></p>
+          </div>
         <h3 class="resume-title">Certifications</h3>
         <div class="resume-item">
           <ul>
@@ -328,166 +347,11 @@
             </li>
           </ul>
         </div>
-        <h3 class="resume-title">Organizations</h3>
-          <div class="resume-item">
-            <h4>InFoTech Society</h4>
-            <p>Member</p>
-          </div>
-
+        </div>
       </div>
     </div>
   </div>
 </section><!-- /Resume Section -->
-
-    <!-- Portfolio Section -->
-    <section id="portfolio" class="portfolio section light-background">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Projects</h2>
-        <p>Here are some of the projects I’ve worked on throughout my journey from my 1st year to 4th year of college. These reflect my growth and the skills I’ve developed along the way.</p>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
-
-          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-first">1st Year</li>
-            <li data-filter=".filter-second">2nd Year</li>
-            <li data-filter=".filter-third">3rd Year</li>
-            <li data-filter=".filter-fourth">4th Year</li>
-          </ul><!-- End Portfolio Filters -->
-
-          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-first">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/first_year.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Python Tkinter</h4>
-                  <p>First Year project - 4pics</p>
-                  <a href="assets/img/portfolio/first_year.jpg" title="App 1" data-gallery="portfolio-gallery-first" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item App1-->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-first">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/first_year_next.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Python Tkinter</h4>
-                  <p>First Year project - 4pics</p>
-                  <a href="assets/img/portfolio/first_year_next.jpg" title="App 1" data-gallery="portfolio-gallery-first" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item App1-->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-second">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/sec_year.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Web based</h4>
-                  <p>Second Year project - Website</p>
-                  <a href="assets/img/portfolio/sec_year.jpg" title="Branding 1" data-gallery="portfolio-gallery-second" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details_two.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-second">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/sec_year_next.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Web based</h4>
-                  <p>Second Year project - Website</p>
-                  <a href="assets/img/portfolio/sec_year_next.jpg" title="Branding 1" data-gallery="portfolio-gallery-second" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details_two.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-second">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/sec_year_next_next.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Web based</h4>
-                  <p>Second Year project - Website</p>
-                  <a href="assets/img/portfolio/sec_year_next_next.jpg" title="Branding 1" data-gallery="portfolio-gallery-second" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details_two.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-third">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/Third_year.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Arduino</h4>
-                  <p>Third Year - Arduion Dancing Lights</p>
-                  <a href="assets/img/portfolio/Third_year.jpg" title="Branding 2" data-gallery="portfolio-gallery-third" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details_three.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-third">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/Third_year_next.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Arduino</h4>
-                  <p>Third Year - Arduion Dancing Lights</p>
-                  <a href="assets/img/portfolio/Third_year_next.jpg" title="Branding 2" data-gallery="portfolio-gallery-third" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details_three.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-fourth">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/fourth_year.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Android Studio</h4>
-                  <p>Fourth Year - Capstone Project Mobile App</p>
-                  <a href="assets/img/portfolio/fourth_year.jpg" title="App 3" data-gallery="portfolio-gallery-fourth" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details_fourth.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item App3-->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-fourth">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/fourth_year_next.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Android Studio</h4>
-                  <p>Fourth Year - Capstone Project Mobile App</p>
-                  <a href="assets/img/portfolio/fourth_year_next.jpg" title="App 3" data-gallery="portfolio-gallery-fourth" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details_fourth.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item App3-->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-fourth">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/fourth_year_next_next.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Android Studio</h4>
-                  <p>Fourth Year - Capstone Project Mobile App</p>
-                  <a href="assets/img/portfolio/fourth_year_next_next.jpg" title="App 3" data-gallery="portfolio-gallery-fourth" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details_fourth.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item App3-->
-
-          </div><!-- End Portfolio Container -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Portfolio Section -->
 
 
     <!-- Final Section -->
