--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
       </div>
     </div>
   </div>
-</section><!-- /Resume Section -->
+</section><!-- /Resume Section ending --> 
 
 
     <!-- Final Section -->
