--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Projects</a></li>
+        <!--<li><a href="#portfolio"><i class="bi bi-images navicon"></i> Projects</a></li> -->
         <li><a href="#Final"><i class="bi bi-journal-text navicon"></i> Final Report</a></li>
         <!--<li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>  
           <ul>
