--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <!--<li><a href="#portfolio"><i class="bi bi-images navicon"></i> Projects</a></li> -->
-        <li><a href="#Final"><i class="bi bi-journal-text navicon"></i> Final Report</a></li>
+        <li><a href="#Final"><i class="bi bi-journal-text navicon"></i> OJT project</a></li>
         <!--<li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>  
           <ul>
             <li><a href="#">Dropdown 1</a></li>
