--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Final Report</h2>
+        <h2>Ojt Project</h2>
         <h3 style="font-weight: bold;">Overview of the Practicum Engagement</h3>
         <p>I was assigned to the Housing Department of Biñan City Hall, where our team was tasked with digitalizing their previously paper-based census and tagging process. We developed a web-based system that enables efficient tracking, printing of records, account management, and streamlined filtering and searching of data.</p>
       </div><!-- End Section Title -->
